--- a/index.html
+++ b/index.html
@@ -23,14 +23,12 @@
  
   <h2> 目录 </h2> 
  <ol> 
- <li> 林大 1-1 前端开发概述 </li> 
- <li> 林大 1-2 网页与网站 </li> 
- <li> 林大 1-3 web前端开发技术 </li> 
+ <li> 林大 1-1 前端开发概述 网页与网站 web前端开发技术</li> 
  </ol> 
  
   <h2> 内容 </h2> 
  
-  <h4> 林大 2-2 文件结构、字符与编码 </h4> 
+  <h4>林大 1-1 前端开发概述 网页与网站 web前端开发技术</h4> 
  <table style="width:100%"> 
  <tr> 
  <th>名称</th> 
@@ -38,7 +36,7 @@
  </tr> 
  <tr> 
  <td>学习内容</td> 
- <td> 这部分我学到了用meta charset="UTF-8"设置网页字符集。源文件与声明的编码方式都是UTF-8时，才能正常显示。否则就会出现乱码哦</td> 
+ <td>web前端和后端的区别,网站的分类，做web的岗位，网站与网页的关系</td> 
  </tr> 
  <tr> 
  <td>课程材料</td> 
@@ -49,7 +47,7 @@
  <td> 
  <audio controls> 
  <!-- <source src="horse.ogg" type="audio/ogg"> --> 
- <source src="2-2.mp3" type="audio/mpeg"> 
+ <source src="" type="audio/mpeg"> 
  Your browser does not support the audio element. 
  </audio> 
  </td> 
@@ -60,16 +58,16 @@
  </tr> 
  <tr> 
  <td>学习时间</td> 
- <td> 2019年4月12日，3小时 </a > </td> 
+ <td> 2019年4月16日，1小时 </a > </td> 
  </tr> 
  <tr> 
  <td>新单词</td> 
- <td> meta（元），character（字符），charset（字符集），head（头），title（标题），body（身体），text（文本），web（网络），doc（文档），type（类型），language（语言）</a > </td> 
+ <td> </td> 
  </tr> 
  <tr> 
  </table> 
  
-  <h4> 林大 2-3 HTML标签：h1-h6、p、br、pre、span、hr </h4> 
+  <h4> </h4> 
  <table style="width:100%"> 
  <tr> 
  <th>名称</th> 
@@ -77,7 +75,7 @@
  </tr> 
  <tr> 
  <td>学习内容</td> 
- <td> 这部分我学到了h1-h6（标题）、p（段落）、br（简单拆行）、pre（预格式文本）、span（文档中的节）、hr（水平线）</td> 
+ <td> </td> 
  </tr> 
  <tr> 
  <td>课程材料</td> 
@@ -90,7 +88,7 @@
  <td> 
  <audio controls> 
  <!-- <source src="horse.ogg" type="audio/ogg"> --> 
- <source src="2-2.mp3" type="audio/mpeg"> 
+ <source src="" type="audio/mpeg"> 
  Your browser does not support the audio element. 
  </audio> 
  </td> 
@@ -105,4 +103,4 @@
  </tr> 
  <tr> 
  <td>学习时间</td> 
- <td> 2019年4月16日</td>
+ <td> 2019年4月17日</td>
