--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
  </tr> 
  <tr> 
  <td>课程材料</td> 
- <td> <a href=" "> PDF（503KB） </a > </td> 
+ <td> <a href=" https://www.icourse163.org/learn/BJFU-1003382003?tid=1003609002#/learn/content?type=detail&id=1005111437&sm=1"> 第一章概述 </a > </td> 
  </tr> 
  <tr> 
  <td>我的讲解</td> 
@@ -67,40 +67,3 @@
  <tr> 
  </table> 
  
-  <h4> </h4> 
- <table style="width:100%"> 
- <tr> 
- <th>名称</th> 
- <th>内容</th> 
- </tr> 
- <tr> 
- <td>学习内容</td> 
- <td> </td> 
- </tr> 
- <tr> 
- <td>课程材料</td> 
- <td>  
- <a href="2-3-HTML标签I.pdf"> 2-3 PDF（596KB） </a >  
- </td> 
- </tr> 
- <tr> 
- <td>我的讲解</td> 
- <td> 
- <audio controls> 
- <!-- <source src="horse.ogg" type="audio/ogg"> --> 
- <source src="" type="audio/mpeg"> 
- Your browser does not support the audio element. 
- </audio> 
- </td> 
- </tr> 
- <tr> 
- <td>我的作品</td> 
- <td> <a href="2-3web前端开发.html"> web前端开发 </a > </td> 
- </tr> 
- <tr> 
- <td>新单词</td> 
- <td> heading（标题）</a > </td> 
- </tr> 
- <tr> 
- <td>学习时间</td> 
- <td> 2019年4月17日</td>
