--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
  <li> 林大 1-前端开发概述 网页与网站 web前端开发技术</li> 
   
   <li> 林大 2-HTML基础 HTML概述，HTML文件结构，HTML标签</li> 
+  <li>林大第三章 CSS样式</li>
  </ol> 
  
   <h2> 内容 </h2> 
@@ -60,11 +61,7 @@
  </tr> 
  <tr> 
  <td>学习时间</td> 
- <td> 2019年4月16日，1小时 </a > </td> 
- </tr> 
- <tr> 
- <td>新单词</td> 
- <td> </td> 
+ <td> 2019年4月16日，1小时  </td> 
  </tr> 
  <tr> 
  </table> 
@@ -107,4 +104,40 @@
  </tr> 
  <tr> 
  </table> 
+
+  <h2> 内容 </h2> 
  
+  <h4>林大第三章 CSS样式</h4> 
+ <table style="width:100%"> 
+ <tr> 
+ <th>名称</th> 
+ <th>内容</th> 
+ </tr> 
+ <tr> 
+ <td>学习内容</td> 
+ <td>CSS的添加方法、CSS选择器、背景样式、超链接样式、列表、表格样式</td> 
+ </tr> 
+ <tr> 
+ <td>课程材料</td> 
+ <td> <a href="https://www.icourse163.org/learn/BJFU-1003382003?tid=1003609002#/learn/content?type=detail&id=1005222300&cid=1006658470"> 第一章概述 </a > </td> 
+ </tr> 
+ <tr> 
+ <td>我的讲解</td> 
+ <td> 
+ <audio controls> 
+ <!-- <source src="horse.ogg" type="audio/ogg"> --> 
+ <source src="" type="audio/mpeg"> 
+ Your browser does not support the audio element. 
+ </audio> 
+ </td> 
+ </tr> 
+ <tr> 
+ <td>我的作品</td> 
+ <td> <a href="2-2-charset-utf-8.html"> 暂时没有作品 </a > </td> 
+ </tr> 
+ <tr> 
+ <td>学习时间</td> 
+ <td> 2019年4月30日，1小时 </a > </td> 
+ </tr> 
+ <tr> 
+ </table> 
